--- a/public/style.css
+++ b/public/style.css
@@ -48,3 +48,16 @@ body {
   .log {
     padding: 5%;
   }
+
+  /* Media query for mobile devices (i.e. screen sizes narrower than 600px) */
+  @media screen and (max-width: 600px) {
+    .container {
+        grid-template-columns: 100%; /* one column layout since these screens are more vertical than horizontal*/
+        grid-template-rows: auto auto auto;
+        grid-template-areas: 
+        "header"
+        "kcal-total"
+        "log"
+        "history"; 
+    }
+  }
