--- a/public/style.css
+++ b/public/style.css
@@ -1,63 +1,96 @@
 body {
-    width: 100vw; 
-    height: 100vh; 
-    margin: 0; 
-    padding: 0; 
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
-.hidden {
-    display: none;
-}
-
-.container {  display: grid;
+.container {
+    display: grid;
     grid-template-columns: 25% 75%;
-    grid-template-rows: 5% 47.5% 47.5%;
+    grid-template-rows: 20% 80%;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-      "header header"
-      "kcal-total log"
-      "history log";
-    width: 100vw;
-    height: 100vh;
-  }
-  
-  .kcal-total { grid-area: kcal-total; }
-  
-  .history { grid-area: history; }
-  
-  .log { grid-area: log; }
-  
-  .header { grid-area: header; }
-  
-  .kcal-total {
+        "kcal-total log"
+        "history log";
+}
+
+.kcal-total {
+    grid-area: kcal-total;
+}
+
+.history {
+    grid-area: history;
+}
+
+.log {
+    grid-area: log;
+}
+
+.kcal-total {
     display: flex;
-    justify-content: center; /*centre horizontally*/
-    align-items: center; /*centre vertically*/
+    /*centre horizontally*/
+    align-items: center;
     flex-direction: column;
-  }
+}
 
-  .header {
-    background-color: orange;
-  }
-
-  .history {
+.history {
     padding: 10%;
+}
+
+.log {
+    padding: 5%;
+}
+
+/* Media query for mobile devices (i.e. screen sizes narrower than 600px) */
+@media screen and (max-width: 600px) {
+    .container {
+        grid-template-columns: 100%;
+        /* one column layout since these screens are more vertical than horizontal*/
+        grid-template-rows: auto auto auto;
+        grid-template-areas:
+            "kcal-total"
+            "log"
+            "history";
+    }
+}
+
+/*
+ * nav tabs 
+ * https://www.w3schools.com/howto/howto_js_tabs.asp
+ */
+ .tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
   }
   
-  .log {
-    padding: 5%;
+  /* Style the buttons that are used to open the tab content */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
   }
-
-  /* Media query for mobile devices (i.e. screen sizes narrower than 600px) */
-  @media screen and (max-width: 600px) {
-    .container {
-        grid-template-columns: 100%; /* one column layout since these screens are more vertical than horizontal*/
-        grid-template-rows: auto auto auto;
-        grid-template-areas: 
-        "header"
-        "kcal-total"
-        "log"
-        "history"; 
-    }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
   }
