--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,20 @@
+/* import font */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 body {
     max-width: 100vw;
     max-height: 100vh;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    font-family: "Inter", sans-serif;
 }
 
 .container {
+    height: 100vh;
     display: grid;
     grid-template-columns: 40% 60%;
-    grid-template-rows: 20% 80%;
+    grid-template-rows: 50% 50%;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -19,7 +25,7 @@ body {
 .kcal-total {
     grid-area: kcal-total;
     display: flex;
-    /*centre horizontally*/
+    justify-content: center; /*centre horizontally*/
     align-items: center;
     flex-direction: column;
     padding: 3%;
@@ -32,7 +38,7 @@ body {
 
 .meals-list {
     overflow-y: auto;
-    height: 300px;
+    height: 70%;
 }
 
 .menu {
@@ -43,6 +49,11 @@ body {
 .kcal-title {
     font-size: larger;
     font-weight: bold;
+}
+
+#total-kcal-today {
+    font-size: 4em;
+    margin: 0;
 }
 
 /* Media query for mobile devices (i.e. screen sizes narrower than 600px) */
