--- a/public/style.css
+++ b/public/style.css
@@ -6,26 +6,83 @@ body {
     max-height: 100vh;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     font-family: "Inter", sans-serif;
+    overflow: hidden;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    font-size: small;
+    padding-left: 0;
+}
+
+option:active {
+    background-color: orange;
+}
+
+li {
+    padding: 7px 0;
+}
+
+label {
+    margin: 12px 0;
+    font-size: medium;
+}
+
+input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+select {
+    width: 100%;
+    padding: 16px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    background-color: white;
+}
+
+option {
+    width: 100%;
+    padding: 6px 4px;
+}
+
+option:hover {
+    background-color:sandybrown;
+}
+
+option:active {
+    background-color: orange;
 }
 
 .container {
     height: 100vh;
     display: grid;
     grid-template-columns: 40% 60%;
-    grid-template-rows: 50% 50%;
+    grid-template-rows: 5% 35% 60%;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
+        "header header"
         "kcal-total menu"
         "history menu";
 }
 
+.header {
+    grid-area: header;
+    background-color: orange;
+}
+
+
 .kcal-total {
     grid-area: kcal-total;
     display: flex;
-    justify-content: center; /*centre horizontally*/
+    justify-content: center;
+    /*centre horizontally*/
     align-items: center;
     flex-direction: column;
     padding: 3%;
@@ -33,12 +90,13 @@ body {
 
 .history {
     grid-area: history;
-    padding: 3%;
+    padding: 5% 1% 5% 5%;
 }
 
 .meals-list {
     overflow-y: auto;
-    height: 70%;
+    height: 60%;
+    margin-bottom: 10px;
 }
 
 .menu {
@@ -46,6 +104,7 @@ body {
     padding: 3%;
 }
 
+/* today's kcal count styles */
 .kcal-title {
     font-size: larger;
     font-weight: bold;
@@ -56,31 +115,113 @@ body {
     margin: 0;
 }
 
-.tabcontent {
-    height: 90%;
+/* recipe styles */
+#recipe-form-div {
+    float: left;
+    width: 45%;
+    height: 80%;
+    padding: 5px;
+}
+
+#recipes-list-div {
+    float: right;
+    width: 45%;
+    height: 80%;
+    padding: 5px;
 }
 
 .recipes-list {
     overflow-y: auto;
-    height: 5em;
+    height: 80%;
 }
 
+/* button styles */
+button {
+    background-color: white;
+    color: black;
+    border: 2px solid orange;
+    transition-duration: 0.4s;
+    padding: 12px 15px;
+    margin: 1% 0%;
+    border-radius: 25px;
+}
+
+button:hover {
+    color: white;
+    background-color: orange;
+}
+
+button:disabled {
+    border-color: gray;
+    color: gray;
+}
+
+/* ingredient form styling */
+.ingredient-name, .ingredient-kcal-count {
+    width: 70%;
+}
+
+#ingredient-form-div {
+    float: left;
+    width: 50%;
+    height: 80%;
+    padding: 5px;
+}
+
+#ingredient-list-div {
+    float: right;
+    width: 50%;
+    height: 80%;
+    padding: 0px;
+}
+
+/* catorory dropdown styling */
+#existing-ingredient-categories {
+    border: 1px solid rgb(118, 118, 118);
+    width: 60%;
+    height: 50px;
+}
+
+#existing-ingredient-categories:hover {
+    border-color: black;
+}
+
+.category-or {
+    display: inline-block;
+    padding: 0 12px;
+}
+
+#ingredient-category {
+    width: 70%;
+    height: 50px;
+}
+
+/* ingredient list styling */
 .ingredients-list {
     overflow-y: auto;
-    height: 15em;
+    height: 20em;
+    margin-bottom: 6px;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
+/* meal form styling */
+.meal-date {
+    float: left;
+    width: 50%;
 }
 
-li {
-    padding: 1% 0;
+.meal-time {
+    float: right;
+    width: 50%;
 }
 
-/* Media query for mobile devices (i.e. screen sizes narrower than 600px) */
-@media screen and (max-width: 600px) {
+.meal-date input, .meal-time input {
+    width: 95%;
+    height: 45px;
+    margin: 8px 0 20px 0;
+}
+
+/* Media query for mobile devices (i.e. screen sizes narrower than 1200px) */
+@media screen and (max-width: 1200px) {
     .container {
         grid-template-columns: 100%;
         /* one column layout since these screens are more vertical than horizontal*/
@@ -98,35 +239,70 @@ li {
  */
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color: white;
+    border-left: 1px solid #ccc;
+}
+
+.tablinks {
+    border-radius: 0px;
+    padding: 5px;
+    margin: 0 12px 0 25px;
 }
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
     background-color: inherit;
     float: left;
-    border: none;
+    border: 2px solid orange;
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
+    width: 20%;
 }
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-    background-color: #ddd;
+    background-color: orange;
+    border: 2px solid orange;
+    color: black;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-    background-color: #ccc;
+    background-color: darkorange;
+    border: 2px solid darkorange;
 }
 
 /* Style the tab content */
 .tabcontent {
     display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
+    padding: 6px 24px;
+    border-left: 1px solid #ccc;
     border-top: none;
+    height: 90%;
 }
+
+
+/* https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
+/* width */
+::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color: rgb(238, 238, 238);
+    border-radius: 10px;
+}
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: orange; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: darkorange; 
+  }
