--- a/public/style.css
+++ b/public/style.css
@@ -113,14 +113,13 @@ li {
 }
 
 label {
-    margin: 12px 0;
     font-size: medium;
 }
 
 input {
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 12px 0px 20px 0px;
     box-sizing: border-box;
 }
 
@@ -221,8 +220,8 @@ option:active {
     width: 100%;
 }
 
-/* catorory dropdown styling */
-#existing-ingredient-categories {
+/* category and select ingredients dropdown styling */
+#existing-ingredient-categories, #selected-ingredients {
     border: 1px solid rgb(118, 118, 118);
     width: 80%;
     height: 50px;
@@ -388,6 +387,10 @@ option:active {
         border-color: black;
     }
 
+    #existing-ingredient-categories {
+        width: 60%;
+    }
+
     #ingredient-category {
         width: 70%;
         height: 50px;
@@ -409,6 +412,13 @@ option:active {
         width: 45%;
         height: 80%;
         padding: 5px;
+    }
+
+    /* styling for select ingredients dropdown */
+    #selected-ingredients {
+        border: none;
+        width: 100%;
+        height: 100%;
     }
 
     /*
